[package]
name = "cottontail-rs"
version = "0.1.0"
authors = ["TODO"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
once_cell = "1.18.0"
noise = "0.8.2"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'EventTarget',
  'KeyboardEvent',
  'Event',
  'CanvasGradient',
  'HtmlDivElement',
  'CssStyleDeclaration'
]

[profile.release]
#strip = true
lto = true
codegen-units = 1
#opt-level = "z"

[profile.dev]
#opt-level = 2
#incremental = false

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3